k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ureverse-fe
  labels:
    app: ureverse-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ureverse-fe
  template:
    metadata:
      labels:
        app: ureverse-fe
    spec:
      containers:
        - name: ureverse-fe
          image: imyoonsj/ureverse-fe-member:latest
          ports:
            - containerPort: 80
