k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ureverse-fe
spec:
  type: ClusterIP
  selector:
    app: ureverse-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
