k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ureverse-fe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ureverse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ureverse-fe
                port:
                  number: 80
